# streamlit

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.flask  README.md  app.py  db_test.py  db_test_activity_diagram.md  db_test_sequence_diagram.md  dump_db.py  flask_app.py  fly.flask.toml  fly.toml  fly.toml.bak  gemini.py  kakeibo_data.json  llm_test.py  main.py  makefile  operateSheet.py  package.json  pyproject.toml  requirements.txt  roadmap_flask_ui.md  sapient-terrain-400823-2ef5af5bd37b.json  secrets.toml  site_example.html  start-flask.sh  start.sh  streamlit_app.py  test.py
.github/workflows/: AddComment.yaml  fly-deploy.yml  fly-flask-deploy.yml  main.yaml  startTIme  startTIme.yaml
backend/: README.md  composer.json
backend-laravel/routes/: api.php  web.php
backend/bootstrap/: app.php
backend/routes/: api.php
frontend/: README.md  package.json
frontend-js/: README.md  app.js  app.jsx  index.html  package-lock.json  package.json  server.js  style.css  test_utils.js  utils.js
frontend/src/: App.jsx  api.js
kakeibo/: __init__.py  auth.py  db.py  line_auth.py
kakeibo/pages/: __init__.py  add_page.py  categories_page.py  dev_page.py  edit_page.py  graphs_page.py
kakeibo/views/: sidebar.py
scripts/: copy_tabulator.js  smoke_check.py
services/: __init__.py  insights.py
static/css/: style.css  (+1 more)
templates/: add.html  aikotoba.html  base.html  categories_list.html  dev_options.html  edit_category.html  edit_list.html  edit_transaction.html  graphs.html  index.html  login.html
tests/: test_smoke.py
utils/: __init__.py  budget.py
(+29 files in other folders)
